<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.mwc.debrief</groupId>
  <artifactId>parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <tycho.version>2.7.0</tycho.version>
    <tycho-extras.version>2.7.0</tycho-extras.version>

    <tycho-repo.url>https://oss.sonatype.org/content/groups/public/</tycho-repo.url>

    <!-- Signing jars. keystore example has been created using

    keytool -genkey -dname "cn=PlanetMayo, ou=CDL, o=Mayo, c=CN" -alias business -keypass key123 -keystore ~/debrief.keystore -storepass store123 -validity 10000
    -->

    <debrief.keystore.path>~/debrief.keystore</debrief.keystore.path>
    <debrief.keystore.alias>business</debrief.keystore.alias>
    <debrief.keystore.store.password>store123</debrief.keystore.store.password>
    <debrief.keystore.key.password>key123</debrief.keystore.key.password>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

  </properties>

  <modules>


    <module>org.freehep</module>
    <!--
    <module>info.limpet</module>
    -->
    <module>info.limpet.libs</module>
    <module>info.limpet.stackedcharts.model</module>
    <module>info.limpet.stackedcharts.ui</module>

    <module>org.mwc.asset.NetAsset2</module>
    <module>org.mwc.asset.NetCore</module>
    <module>org.mwc.asset.ScenarioController2</module>
    <module>org.mwc.asset.ScenarioPlotter</module>
    <module>org.mwc.asset.SensorMonitor</module>
    <module>org.mwc.asset.VesselMonitor</module>
    <module>org.mwc.asset.core</module>
<!--
    <module>org.mwc.asset.core.feature</module>
-->
    <module>org.mwc.asset.help</module>
    <module>org.mwc.asset.legacy</module>
    <module>org.mwc.debrief.help</module>
    <module>org.eclipse.nebula.cwt</module>
    <module>org.eclipse.nebula.widgets.cdatetime</module>
    <module>org.eclipse.nebula.jface.cdatetime</module>
    <module>org.mwc.cmap.LiveDataMonitor</module>
    <module>org.mwc.cmap.NarrativeViewer</module>
    <module>org.mwc.cmap.openmap</module>
    <module>org.mwc.cmap.geotools</module>
    <module>org.mwc.cmap.NaturalEarth</module>
    <module>org.mwc.cmap.TimeController</module>
    <module>org.mwc.cmap.combined.feature</module>
    <module>org.mwc.cmap.core</module>
    <module>org.mwc.cmap.grideditor</module>
<!--    <module>org.mwc.cmap.installer</module>
    <module>org.mwc.cmap.layer_manager</module> -->
    <module>org.mwc.cmap.legacy</module>
    <module>org.mwc.cmap.overview</module>
    <module>org.mwc.cmap.plotViewer</module>
<!--
    <module>org.mwc.cmap.tests</module>  -->
    <module>org.mwc.cmap.tote</module>
    <module>org.mwc.cmap.xyplot</module>
    <module>org.mwc.cmap.jfreechart</module>
    <module>org.mwc.cmap.media</module>
    <module>org.mwc.debrief.SensorFusion</module>
    <module>org.mwc.debrief.TimeBar</module>
    <module>org.mwc.debrief.combined.feature</module>
    <module>org.mwc.debrief.xmleditor.feature</module>
    <module>org.mwc.debrief.core</module>
    <module>org.mwc.debrief.dis</module>
    <module>org.mwc.debrief.data_feed</module>
    <module>org.mwc.debrief.data_feed_dummy</module>
    <module>org.mwc.debrief.legacy</module>
    <module>org.mwc.debrief.pepys</module>
    <module>org.mwc.debrief.lite</module>
    <module>org.mwc.debrief.multipath2</module>
    <module>org.mwc.debrief.track_shift</module>
    <module>org.mwc.gnd.demonstrator</module>
    <module>org.qinetiq.data_feed</module>
    <module>org.mwc.debrief.scripting</module>
    <module>org.mwc.debrief.test2</module>
    <module>org.mwc.debrief.editable.test</module>
    
    <module>org.mwc.debrief.targetplatforms</module>
<!--
    <module>org.mwc.debrief.site</module>
-->
    <module>org.mwc.debrief.product</module>
    <module>org.mwc.debrief.satc.core</module>
    <module>org.mwc.debrief.satc.integration</module>
    <module>org.mwc.debrief.limpet_integration</module>
<!--
    <module>org.mwc.debrief.ui_test</module>
-->
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-versions-plugin</artifactId>
          <version>${tycho.version}</version>
      </plugin>
      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>target-platform-configuration</artifactId>
         <version>${tycho.version}</version>
         <configuration>
         <target>
           <artifact>
             <groupId>org.mwc.debrief</groupId>
             <artifactId>eclipse-latest</artifactId>
             <version>0.0.1-SNAPSHOT</version>
           </artifact>
         </target>
          <environments>
<!--
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86</arch>
            </environment>
-->
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
         </configuration>
      </plugin>
      <plugin>
	<groupId>org.eclipse.tycho</groupId>
	<artifactId>tycho-surefire-plugin</artifactId>
	<version>${tycho.version}</version>
	<configuration>
  	  <useUIHarness>true</useUIHarness>
	  <useUIThread>true</useUIThread>
	  <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dorg.eclipse.ui.testsDisableWorkbenchAutoSave=true -DbuildMode=true</argLine>
	<!-- https://docs.sonatype.org/display/TYCHO/How+to+run+SWTBot+tests+with+Tycho -->
	<!-- set useUIThread=true for regular ui tests -->
	<!-- set useUIThread=false for swtbot tests -->

	  <product>org.eclipse.platform.ide</product>
	  <application>org.eclipse.ui.ide.workbench</application>
	  <dependencies>
		<dependency>
			<type>p2-installable-unit</type>
			<artifactId>org.eclipse.platform</artifactId>
			<version>0.0.0</version>
		</dependency>
	<!-- http://www.jmock.org/maven.html -->
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-legacy</artifactId>
			<version>2.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-junit4</artifactId>
			<version>2.5.1</version>
		</dependency>
	  </dependencies>
	  <includes>
		<include>**/AllTests.class</include>
		<include>**/*AllTests*.class</include>
		<include>**/*AllBotTests*.class</include>
		<include>**/*TestSuite*.class</include>
	  </includes>
	</configuration>
	</plugin>
	<plugin>
		<groupId>org.eclipse.tycho</groupId>
		<artifactId>tycho-compiler-plugin</artifactId>
		<version>${tycho.version}</version>
		<configuration>
			<encoding>UTF-8</encoding>
			<source>11</source>
			<target>11</target>
			<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
		</configuration>
	</plugin>
<!--
	<plugin>
		<groupId>org.eclipse.tycho</groupId>
		<artifactId>tycho-source-plugin</artifactId>
		<version>${tycho.version}</version>
		<executions>
			<execution>
				<id>plugin-source</id>
				<goals>
				<goal>plugin-source</goal>
				</goals>
			</execution>
		</executions>
	</plugin>
-->

    </plugins>
  </build>
  <profiles>
    <profile>
      <id>mac</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-surefire-plugin</artifactId>
            <version>${tycho.version}</version>
            <configuration>
	      <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dorg.eclipse.ui.testsDisableWorkbenchAutoSave=true -XstartOnFirstThread</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
        <id>sign</id>
        <activation>
            <property>
                <name>signjar</name>
                <value>true</value>
            </property>
        </activation>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jarsigner-plugin</artifactId>
                    <version>1.2</version>
                    <executions>
                        <execution>
                            <id>sign</id>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
			<execution>
			    <id>verify</id>
			    <goals>
				<goal>verify</goal>
			    </goals>
			</execution>
                    </executions>
		    <configuration>
			<keystore>${debrief.keystore.path}</keystore>
			<alias>${debrief.keystore.alias}</alias>
			<storepass>${debrief.keystore.store.password}</storepass>
			<keypass>${debrief.keystore.key.password}</keypass>
		    </configuration>
                </plugin>
            </plugins>
        </build>
    </profile>
  </profiles>
</project>
